<resources>
    <string name="app_name">Pratica Calculadora</string>
    <string name="clear_button">AC</string>
    <string name="division_button">/</string>
    <string name="number_seven">7</string>
    <string name="number_eight">8</string>
    <string name="number_nine">9</string>
    <string name="multiply_button">x</string>
    <string name="negative_button">-</string>
    <string name='plus_button'>+</string>
    <string name='equal_button'>=</string>
    <string name="number_one">1</string>
    <string name="number_two">2</string>
    <string name="number_three">3</string>
    <string name="number_zero">0</string>
    <string name="comma_button">.</string>
    <string name="number_six">6</string>
    <string name="number_five">5</string>
    <string name="number_four">4</string>

</resources>